--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "svelte-kit start"
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-netlify": "^1.0.0-next.4",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"svelte": "^3.29.0",
