--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-	"name": "wai-aria-examples-svelte",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"start": "svelte-kit start"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-netlify": "^1.0.0-next.4",
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/kit": "next",
-		"svelte": "^3.29.0",
-		"vite": "^2.1.0"
-	},
-	"type": "module",
-	"engines": {
-		"node": ">= 12.17.0"
-	}
+  "name": "wai-aria-examples-svelte",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "start": "svelte-kit start"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-netlify": "^1.0.0-next.17",
+    "@sveltejs/adapter-node": "^1.0.0-next.10",
+    "@sveltejs/kit": "^1.0.0-next.117",
+    "svelte": "^3.38.3",
+    "vite": "^2.3.8",
+    "svelte-check": "^2.0.0",
+    "svelte-preprocess": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.0.0",
+    "typescript": "^4.0.0",
+    "tslib": "^2.0.0",
+    "@tsconfig/svelte": "^2.0.0"
+  },
+  "type": "module",
+  "engines": {
+    "node": ">= 12.17.0"
+  }
 }
